<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.erudio.simplecrud.activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/title_pessoa_fisica"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/et_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cpf"/>


    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birthday"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"
        android:text="@string/action_submit"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_response"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>